--- a/app/src/main/res/layout/activity_dang_ky.xml
+++ b/app/src/main/res/layout/activity_dang_ky.xml
@@ -7,37 +7,9 @@
     tools:context=".MainActivity"
     tools:ignore="ExtraText"><![CDATA[
 
-
-
-
-
-
-
-
     "
         tools:layout_editor_absoluteX="247dp"
         tools:layout_editor_absoluteY="427dp" />
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     ]]>
 
@@ -146,7 +118,8 @@
         app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/txtTaiKhoan" />
+        app:layout_constraintTop_toBottomOf="@+id/txtTaiKhoan"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/textView2"
