--- a/app/src/main/res/layout/item_phong.xml
+++ b/app/src/main/res/layout/item_phong.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <LinearLayout
@@ -10,15 +10,15 @@
 
         <TextView
             android:id="@+id/idPhong"
-            android:layout_width="wrap_content"
-            android:layout_height="34dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="1"
             android:textSize="24sp" />
 
         <TextView
             android:id="@+id/hoten"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Họ tên"
@@ -26,7 +26,7 @@
 
         <TextView
             android:id="@+id/ngaydat"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Ngày đặt"
@@ -34,7 +34,7 @@
 
         <TextView
             android:id="@+id/ngayden"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Ngày đến"
@@ -42,7 +42,7 @@
 
         <TextView
             android:id="@+id/songay"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Số ngày"
@@ -52,44 +52,37 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="102dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+        <TextView
+            android:id="@+id/loai"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Loại phòng"
+            android:textSize="24sp" />
 
-            <TextView
-                android:id="@+id/loai"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Loại phòng"
-                android:textSize="24sp" />
+        <TextView
+            android:id="@+id/giatien"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Giá tiền"
+            android:textSize="24sp" />
 
-            <TextView
-                android:id="@+id/giatien"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Giá tiền"
-                android:textSize="24sp" />
-
-            <TextView
-                android:id="@+id/tongtien"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Tổng tiền"
-                android:textSize="24sp" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/tongtien"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Tổng tiền"
+            android:textSize="24sp" />
     </LinearLayout>
 
     <View
         android:id="@+id/view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_width="match_parent"
+        android:layout_height="1dp" />
+
 </LinearLayout>
