--- a/app/src/main/res/layout/activity_order_room.xml
+++ b/app/src/main/res/layout/activity_order_room.xml
@@ -28,7 +28,7 @@
         android:layout_marginBottom="117dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="họ tên"
+        android:text=""
         app:layout_constraintBottom_toTopOf="@+id/txtNgayDen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/lblHoten"
@@ -54,7 +54,7 @@
         android:layout_marginBottom="85dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="ngày đặt"
+        android:text=""
         app:layout_constraintBottom_toBottomOf="@+id/txtNgayDen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/lblNgayDat"
@@ -67,7 +67,7 @@
         android:layout_marginEnd="36dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Ngày Đến"
+        android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/lblNgayDen"
@@ -138,7 +138,7 @@
         android:layout_marginBottom="254dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Số ngày"
+        android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/lblSoNgay"
