--- a/app/src/main/res/layout/activity_dang_ky.xml
+++ b/app/src/main/res/layout/activity_dang_ky.xml
@@ -6,22 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     tools:ignore="ExtraText"><![CDATA[
-
     "
         tools:layout_editor_absoluteX="247dp"
         tools:layout_editor_absoluteY="427dp" />
-
     ]]>
 
     <EditText
         android:id="@+id/txtMatKhau2"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="25dp"
         android:layout_marginEnd="13dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="25dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:text="Name"
         app:layout_constraintBottom_toTopOf="@+id/txtQuyen"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,16 +60,16 @@
         android:id="@+id/txtTaiKhoan"
         android:layout_width="0dp"
         android:layout_height="59dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="121dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="122dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
-        app:layout_constraintBottom_toBottomOf="@+id/textView3"
+        android:text=""
+        app:layout_constraintBottom_toTopOf="@+id/txtMatKhau2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toTopOf="@+id/twDangKy" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <TextView
         android:id="@+id/textView3"
@@ -93,8 +91,8 @@
         android:id="@+id/lblQuyen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="38dp"
-        android:layout_marginEnd="56dp"
+        android:layout_marginStart="39dp"
+        android:layout_marginEnd="48dp"
         android:layout_marginBottom="44dp"
         android:text="Quyền"
         android:textColor="@color/black"
@@ -109,17 +107,13 @@
         android:id="@+id/txtMatKhau"
         android:layout_width="0dp"
         android:layout_height="61dp"
-        android:layout_marginTop="36dp"
         android:layout_marginEnd="13dp"
-        android:layout_marginBottom="35dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:text="Name"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/txtTaiKhoan"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toEndOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/textView2"
@@ -175,7 +169,7 @@
         android:id="@+id/linearLayout"
         android:layout_width="443dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="36dp"
+        android:layout_marginBottom="37dp"
         android:background="@color/purple_500"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/twDangKy"
@@ -197,16 +191,16 @@
     <EditText
         android:id="@+id/txtQuyen"
         android:layout_width="0dp"
-        android:layout_height="53dp"
-        android:layout_marginTop="117dp"
-        android:layout_marginEnd="17dp"
-        android:layout_marginBottom="118dp"
+        android:layout_height="58dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginBottom="43dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
-        app:layout_constraintBottom_toBottomOf="@+id/btnDangKy"
+        android:text=""
+        app:layout_constraintBottom_toBottomOf="@+id/switch1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/lblQuyen"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
