--- a/app/src/main/res/layout/dialog_xacnhan_custom.xml
+++ b/app/src/main/res/layout/dialog_xacnhan_custom.xml
@@ -18,10 +18,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="TextView"
+            android:text="Xác Nhận"
+            android:textAlignment="center"
             android:textSize="32dp"
-            android:textStyle="bold"
-            android:textAlignment="center"/>
+            android:textStyle="bold" />
 
     </LinearLayout>
 
